# tracker

./: .gitignore  Cargo.toml  index.css  index.html  orval.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
api/: go.mod
public/: index.html
reverse-proxy/: Cargo.toml
reverse-proxy/src/: main.rs
server/: Cargo.toml  Rocket.toml  justfile  plopfile.mjs
server/entity/: Cargo.toml
server/entity/src/entities/: task.rs
server/migration/src/: m20220101_000001_create_table.rs
server/src/: main.rs  pool.rs
server/src/models/: mod.rs
server/src/routes/: assets.rs  assets_route.rs  create_task_route.rs  mod.rs  tasks_route.rs
server/templates/: route.rs.hbs
src/: main.rs
web/: .gitignore  Cargo.toml  Trunk.toml  api.ts  component.ts  gen.sh  index.css  index.html  index.ts
web-perseus/: Cargo.toml
web-perseus/src/: main.rs  reverse_proxy.rs
web-perseus/src/templates/: index.rs
web/model/: user.ts
web/src/: lib.rs  main.rs
web/src/apis/: configuration.rs  default_api.rs
web/src/components/: mod.rs  todo_list.rs
web/src/models/: create_task_input.rs  error_message.rs  mod.rs  task.rs  user.rs
