[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
axum-client-ip = "0.2.0"
hyper = "0.14.23"
hyper-reverse-proxy = "0.5.1"
hyper-trust-dns = "0.5.0"
lazy_static = "1.4.0"
tokio = { version = "1.22.0", features = ["full"] }
