[package]
name = "web-perseus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.0-beta.11"}
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
gloo-console = "0.2.3"
gloo-timers = "0.2.4"
lazy_static = "1.4.0"
awc = "3.0.1"

# Engine-only dependencies go here
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-actix-web = { version = "=0.4.0-beta.11", features = [ "dflt-server" ] }
actix-web = "=4.1.0"
actix-http = "=3.2.1"
futures = "0.3"
actix-proxy = { git = "https://github.com/Gentoli/actix_proxy" }

# Browser-only dependencies go here
[target.'cfg(target_arch = "wasm32")'.dependencies]
