[package]
name = "tracker_web"
version = "0.1.0"
authors = ["Quinn Shanahan <q.shanahan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew", branch = "master", features = ["csr", "hydration"] }
