[package]
name = "tracker_web"
version = "0.1.0"
authors = ["Quinn Shanahan <q.shanahan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew", branch = "master", features = ["csr", "hydration"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
wasm-bindgen-futures = "0.4.33"

[dependencies.reqwest]
package = "reqwest-wasm"
version = "0.11.15"
features = ["json", "multipart"]

[dependencies.web-sys]
version = "0.3"
features = ["console"]
